- TW-1813 Range filter doesn't work
          (thanks to george js).
- TW-1820 Install with -DLANGUAGE=2 flag not work.
          (thanks to E. Manuel Cerr'on Angeles)
- TW-1855 "Well-known" CA certificates not properly auto-loaded
          (thanks to Flavio Poletti).
- TW-1857 Change Task::get call to the more efficient Task::has
          (thanks to Zachary Manning).
- TW-1873 Specify different path to extensions/hooks directory
          (thanks to Eli).
- TW-1878 uuids subcommand produces a space-delimited list, not comma-delimited
          (thanks to Scott Kostyshak).
- Added 'juhannus' as a synonym for 'midsommarafton'
          (thanks to Lynoure Braakman).
- Deprecated the 'DUETODAY' virtual tag, which is a synonym for the 'TODAY'
  virtual tag.
- Removed deprecated 'alias._query' setting.
- Fixed ambiguity in the esp-ESP localization
          (thanks to Fidel Mato).
- Deprecated the 'new-uuid' verbosity option, since its functionality can be
  removed by merging with 'new-id'.
- Correct a false-positive warning when a due date is removed and a wait is
  added.
- Added 'QUARTER' virtual tag.
- Fixed unquoted glob in bash completion script
          (thanks to Ran Benita).
- Deprecated use of alternate Boolean configuration settings. Use values "0" for
  off, and "1" for on. Avoid used of "on", "off", "true", "t", "false", "f",
  "yes", "y", "no", "n".
- Fixed test harness for Python 3.x.
          (thanks to jrabbit).
- Improved certificate validation diagnostics
          (thanks to Jelle van der Waa).

------ current release ---------------------------

2.5.1 (2016-02-24) 8b4ae3b54b44dfbd00b96cdd6dceb8dfe7cc1ea0

- TD-104  Unrecognized taskwarrior file format
          (thanks to Jeremy John Reeder, Reg).
- TW-38   Dates in the far future give bad estimates in burndown
          (thanks to Ben Boeckel).
- TW-188  short help text
          (thanks to David Patrick).
- TW-311  Estimated completion in burndown.daily shows impossible results